deploy: 247aa424d232183ff159402ef609c4683fb470d6

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -955,6 +955,9 @@
                               <a href="MacroTools.PassiveAbilities.RegionRestricted.html" name="" title="RegionRestricted">RegionRestricted</a>
                           </li>
                           <li>
+                              <a href="MacroTools.PassiveAbilities.RemoveOnDeath.html" name="" title="RemoveOnDeath">RemoveOnDeath</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.PassiveAbilities.RestoreManaFromDamage.html" name="" title="RestoreManaFromDamage">RestoreManaFromDamage</a>
                           </li>
                           <li>
