deploy: ecfad942f486030ce654dc58d843b4d23c29ddf0

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -359,7 +359,16 @@
                               <a href="MacroTools.Commands.Clear.html" name="" title="Clear">Clear</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Commands.GiveGold.html" name="" title="GiveGold">GiveGold</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Commands.GiveLumber.html" name="" title="GiveLumber">GiveLumber</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Commands.Limited.html" name="" title="Limited">Limited</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Commands.Share.html" name="" title="Share">Share</a>
                           </li>
                     </ul>
                 </li>
