--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -153,13 +153,13 @@
                               <a href="WarcraftLegacies.Source.GameLogic.FactionChoiceDialogPresenter.html" name="" title="FactionChoiceDialogPresenter">FactionChoiceDialogPresenter</a>
                           </li>
                           <li>
-                              <a href="WarcraftLegacies.Source.GameLogic.GameSettings.html" name="" title="GameSettings">GameSettings</a>
-                          </li>
-                          <li>
                               <a href="WarcraftLegacies.Source.GameLogic.HeroGlowFix.html" name="" title="HeroGlowFix">HeroGlowFix</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.GameLogic.InfoQuests.html" name="" title="InfoQuests">InfoQuests</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.GameLogic.MapFlagSetup.html" name="" title="MapFlagSetup">MapFlagSetup</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.GameLogic.OpenAllianceVote.html" name="" title="OpenAllianceVote">OpenAllianceVote</a>
